--- a/src/common/fonts.less
+++ b/src/common/fonts.less
@@ -1,4 +1,14 @@
 @font-face {
+  font-family: HelveticaNeueCyr-Heawy;
+  src: local('HelveticaNeueCyr-Heawy'), url('../fonts/HelveticaNeueCyr-Heavy.otf') format('opentype');
+}
+
+@font-face {
+  font-family: HelveticaNeueCyr-Bold;
+  src: local('HelveticaNeueCyr-Bold'), url('../fonts/HelveticaNeueCyr-Bold.otf') format('opentype');
+}
+
+@font-face {
   font-family: HelveticaNeueCyr;
   src: local('HelveticaNeueCyr'), url('../fonts/HelveticaNeueCyr-Medium.otf') format('opentype');
 }
