--- a/src/components/bg-video/index.less
+++ b/src/components/bg-video/index.less
@@ -9,9 +9,13 @@
   height: 150vh;
   aspect-ratio: 1 / 1;
 
+  .tablet-screen({
+    top: -56vh;
+  });
+
   .mobile-screen({
-    height: 130%;
-    top: -15%;
-    bottom: -15%;
-  })
+    height: 200%;
+    top: -30%;
+    bottom: -30%;
+  });
 }
