--- a/src/components/block-bottom/index.less
+++ b/src/components/block-bottom/index.less
@@ -1,7 +1,7 @@
 .block-bottom {
-  color: #FFF;
-  font-family: HelveticaNeueCyr-Light, sans-serif;
-  font-size: 12px;
+  color: var(--font-color-light);
+  font-family: var(--font-light);
+  font-size: var(--font-size-xs);
   font-weight: 400;
   letter-spacing: 0;
   line-height: 100%;
