--- a/src/components/block-links/index.less
+++ b/src/components/block-links/index.less
@@ -1,20 +1,20 @@
 @import url("../../common/adaptive");
 
 .block-links {
-  color: #FFF;
-  font-family:  HelveticaNeueCyr-UltraLight, sans-serif;
-  font-size: 24px;
+  color: var(--font-color-light);
+  font-family: var(--font-ultra-light);
+  font-size: var(--font-size-xxl);
   font-style: normal;
   font-weight: 300;
   line-height: 90%;
   text-align: center;
 
   .mobile-screen({
-    font-size: 16px;
+    font-size: var(--font-size-m);
   });
 
   a {
-    color: #FFF;
+    color: var(--font-color-light);
     text-decoration-line: underline;
     text-decoration-skip-ink: auto;
     text-decoration-style: solid;
