--- a/src/components/block-video/index.less
+++ b/src/components/block-video/index.less
@@ -21,7 +21,7 @@
     width: 300px;
     min-width: 300px;
     height: 300px;
-    border-radius: 30px;
+    border-radius: var(--border-radius-default);
     background: lightgray 50% / cover no-repeat;
     background-size: cover;
     cursor: pointer;
@@ -30,7 +30,7 @@
   &__modal {
     &__video {
       overflow: hidden;
-      border-radius: 30px;
+      border-radius: var(--border-radius-default);
     }
   }
 }
