--- a/src/components/footer/index.less
+++ b/src/components/footer/index.less
@@ -3,8 +3,8 @@
 .footer {
   display: flex;
   flex-direction: column;
-  color: #FFF;
-  font-family: HelveticaNeueCyr-Light, sans-serif;
+  color: var(--font-color-light);
+  font-family: var(--font-light);
 
   &__blocks {
     display: flex;
@@ -32,8 +32,8 @@
 
   &__block-title {
     margin: 0 0 25px;
-    font-family: HelveticaNeueCyr, sans-serif;
-    font-size: 24px;
+    font-family: var(--font-main);
+    font-size: var(--font-size-xxl);
     font-style: normal;
     font-weight: 700;
     line-height: 120%; /* 28.8px */
@@ -55,17 +55,17 @@
 
       &__title {
         margin: 0 0 5px;
-        color: #FFF;
-        font-family: HelveticaNeueCyr, sans-serif;
-        font-size: 18px;
+        color: var(--font-color-light);
+        font-family: var(--font-main);
+        font-size: var(--font-size-l);
         font-style: normal;
         font-weight: 700;
         line-height: 100%;
       }
 
       &__link {
-        color: #FFF;
-        font-size: 18px;
+        color: var(--font-color-light);
+        font-size: var(--font-size-l);
         font-style: normal;
         font-weight: 400;
         line-height: 100%; /* 18px */
@@ -77,7 +77,7 @@
 
         &_phone {
           font-family: Osvald, sans-serif;
-          font-size: 32px;
+          font-size: var(--font-size-xxxl);
           font-style: normal;
           font-weight: 600;
           line-height: 90%; /* 28.8px */
@@ -102,8 +102,8 @@
 
     &__link {
       margin-bottom: 20px;
-      font-family: HelveticaNeueCyr, sans-serif;
-      font-size: 24px;
+      font-family: var(--font-main);
+      font-size: var(--font-size-xxl);
       font-weight: 700;
       letter-spacing: 0;
       line-height: 120%;
