--- a/src/components/page/index.less
+++ b/src/components/page/index.less
@@ -22,7 +22,7 @@
     }
 
     &_links {
-      background: #DB1933;
+      background: var(--color-danger);
     }
 
     &_offer {
@@ -35,7 +35,7 @@
         display: block;
         width: 100%;
         height: 600px;
-        background-color: #202020;
+        background-color: var(--color-secondary);
         background-repeat: no-repeat;
         content: ' ';
         mask-image: url("../../icons/big-arcs-4back.svg");
@@ -62,24 +62,24 @@
     }
 
     &_cases {
-      background: #78516C;
+      background: var(--color-primary);;
     }
 
     &_teachers {
-      background: #202020;
+      background: var(--color-secondary);
     }
 
     &_review {
-      background: #202020;
+      background: var(--color-secondary);
     }
 
     &_video {
-      background: #202020;
+      background: var(--color-secondary);
     }
 
     &_footer {
       position: relative;
-      background-color: #DB1933;
+      background-color: var(--color-danger);
 
 
       &::after {
@@ -88,7 +88,7 @@
         display: block;
         width: 100%;
         height: 100%;
-        background-color: #ffffff1a;
+        background-color: var(--font-color-light)fff1a;
         background-position: 50%;
         background-repeat: no-repeat;
         background-size: 45% 100%;
@@ -102,7 +102,7 @@
     }
 
     &_bottom {
-      background-color: #202020;
+      background-color: var(--color-secondary);
     }
   }
 
