--- a/src/components/spoiler/index.less
+++ b/src/components/spoiler/index.less
@@ -7,8 +7,8 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    font-family: HelveticaNeueCyr-Light, sans-serif;
-    font-size: 22px;
+    font-family: var(--font-light);
+    font-size: var(--font-size-xl);
     font-weight: 550;
     gap: 10px;
     letter-spacing: 0;
@@ -21,7 +21,7 @@
       width: 32px;
       height: 32px;
       box-sizing: border-box;
-      background-color: #202020;
+      background-color: var(--color-secondary);
       background-repeat: no-repeat;
       content: ' ';
       cursor: pointer;
