--- a/src/components/block-faq/index.less
+++ b/src/components/block-faq/index.less
@@ -4,7 +4,7 @@
   display: flex;
   gap: 10px;
 
-  .mobile-screen({
+  .tablet-screen({
     flex-direction: column;
     gap: 0;
   });
@@ -13,14 +13,14 @@
     width: calc(50% - 5px);
     height: 517.5px;
     flex: 1 0 0;
-    border-radius: 30px 30px 0;
+    border-radius: var(--border-radius-default) var(--border-radius-default) 0;
     background: lightgray 50% / cover no-repeat;
 
-    .mobile-screen({
+    .tablet-screen({
       min-width: 100%;
       height: auto;
       aspect-ratio: 1 / 1;
-      border-radius: 30px;
+      border-radius: var(--border-radius-default);
       margin-bottom: 40px;
     });
   }
@@ -35,28 +35,28 @@
         width: 300px;
         padding-left: 70px;
         margin-bottom: 50px;
-        color: #202020;
-        font-family: HelveticaNeueCyr, sans-serif;
-        font-size: 48px;
+        color: var(--font-color-dark);
+        font-family: var(--font-main);
+        font-size: var(--font-size-xxxxl);
         font-style: normal;
         font-weight: 900;
         line-height: 90%;
 
         .mobile-screen({
-          font-size: 32px;
+          font-size: var(--font-size-xxxl);
           margin-bottom: 30px;
           padding-left: 0;
         })
       }
 
       &__list {
-        border-radius: 0 30px 30px!important;
+        border-radius: 0 var(--border-radius-default) var(--border-radius-default)!important;
         .mobile-screen({
-          border-radius: 30px!important;
+          border-radius: var(--border-radius-default)!important;
         })
       }
 
-    .mobile-screen({
+    .tablet-screen({
       width: 100%;
     })
   }
