--- a/src/components/block-partners/index.less
+++ b/src/components/block-partners/index.less
@@ -11,14 +11,14 @@
 
   &__title {
     margin-bottom: 50px;
-    font-family: HelveticaNeueCyr, sans-serif;
-    font-size: 48px;
+    font-family: var(--font-main);
+    font-size: var(--font-size-xxxxl);
     font-style: normal;
     font-weight: 900;
     line-height: 90%; /* 43.2px */
 
     .mobile-screen({
-      font-size: 32px;
+      font-size: var(--font-size-xxxl);
       margin-bottom: 40px;
     });
   }
@@ -43,29 +43,29 @@
     display: block;
     width: 100%;
     margin-bottom: 70px;
-    color: #202020;
-    font-family: HelveticaNeueCyr-Light, sans-serif;
-    font-size: 24px;
+    color: var(--font-color-dark);
+    font-family: var(--font-light);
+    font-size: var(--font-size-xxl);
     font-style: normal;
     font-weight: 400;
     line-height: 120%; /* 28.8px */
 
     .mobile-screen({
-      font-size: 16px;
+      font-size: var(--font-size-m);
       margin-bottom: 40px;
     });
   }
 
   &__faq-title {
     margin-bottom: 50px;
-    color: #202020;
-    font-family: HelveticaNeueCyr, sans-serif;
-    font-size: 48px;
+    color: var(--font-color-dark);
+    font-family: var(--font-main);
+    font-size: var(--font-size-xxxxl);
     font-style: normal;
     font-weight: 900;
     line-height: 90%; /* 43.2px */
     .mobile-screen({
-      font-size: 32px;
+      font-size: var(--font-size-xxxl);
       margin-bottom: 40px;
     });
   }
