--- a/src/components/block-reviews/index.less
+++ b/src/components/block-reviews/index.less
@@ -26,15 +26,15 @@
 
   &__title {
     margin-bottom: 60px;
-    color: #FFF;
-    font-family: HelveticaNeueCyr, sans-serif;
-    font-size: 48px;
+    color: var(--font-color-light);
+    font-family: var(--font-main);
+    font-size: var(--font-size-xxxxl);
     font-style: normal;
     font-weight: 900;
     line-height: 90%; /* 43.2px */
 
     .mobile-screen({
-      font-size: 32px;
+      font-size: var(--font-size-xxxl);
       margin-bottom: 40px;
     });
   }
@@ -56,7 +56,7 @@
     width: 300px;
     min-width: 300px;
     height: 300px;
-    border-radius: 30px;
+    border-radius: var(--border-radius-default);
     background: lightgray 50% / cover no-repeat;
     background-size: cover;
     cursor: pointer;
@@ -65,7 +65,7 @@
   &__modal {
     &__video {
       overflow: hidden;
-      border-radius: 30px;
+      border-radius: var(--border-radius-default);
     }
   }
 }
