--- a/src/components/block-teachers/index.less
+++ b/src/components/block-teachers/index.less
@@ -15,15 +15,15 @@
 
   &__title {
     margin-bottom: 90px;
-    color: #FFF;
-    font-family: HelveticaNeueCyr, sans-serif;
-    font-size: 48px;
+    color: var(--font-color-light);
+    font-family: var(--font-main);
+    font-size: var(--font-size-xxxxl);
     font-style: normal;
     font-weight: 900;
     line-height: 90%; /* 43.2px */
 
     .mobile-screen({
-      font-size: 32px;
+      font-size: var(--font-size-xxxl);
       margin-bottom: 66px;
     });
   }
@@ -31,15 +31,15 @@
   &__text {
     width: 429px;
     margin-bottom: 90px;
-    color: #FFF;
-    font-family: HelveticaNeueCyr-Light, sans-serif;
-    font-size: 24px;
+    color: var(--font-color-light);
+    font-family: var(--font-light);
+    font-size: var(--font-size-xxl);
     font-style: normal;
     font-weight: 400;
     line-height: 120%; /* 28.8px */
 
     .mobile-screen({
-      font-size: 16px;
+      font-size: var(--font-size-m);
       margin-bottom: 66px;
     });
   }
@@ -59,7 +59,7 @@
     z-index: 1;
     width: 240px;
     min-width: 240px;
-    border-radius: 30px;
+    border-radius: var(--border-radius-default);
     cursor: pointer;
     transition: scale 0.3s ease-in-out;
 
@@ -70,7 +70,7 @@
 
     &:hover {
       z-index: 2;
-      background: #DB1933;
+      background: var(--color-danger);
       scale: 1.2;
 
       .mobile-screen({
@@ -81,7 +81,7 @@
     &__image {
       width: 240px;
       height: 240px;
-      border-radius: 30px;
+      border-radius: var(--border-radius-default);
       background: lightgray 50% / cover no-repeat;
 
       .mobile-screen({
@@ -92,9 +92,9 @@
 
     &__title {
       margin-bottom: 10px;
-      color: #FFF;
-      font-family: HelveticaNeueCyr, sans-serif;
-      font-size: 24px;
+      color: var(--font-color-light);
+      font-family: var(--font-main);
+      font-size: var(--font-size-xxl);
       font-style: normal;
       font-weight: 700;
       line-height: 90%;/* 28.8px */
@@ -105,27 +105,27 @@
     }
 
     &__text {
-      color: #FFF;
-      font-family: HelveticaNeueCyr-Light, sans-serif;
-      font-size: 18px;
+      color: var(--font-color-light);
+      font-family: var(--font-light);
+      font-size: var(--font-size-l);
       font-style: normal;
       font-weight: 400;
       line-height: 90%; /* 16.2px */
 
       .mobile-screen({
-        font-size: 14px;
+        font-size: var(--font-size-s);
       });
     }
 
     &__info {
       padding: 32px 36px 36px;
-      color: #fff;
+      color: var(--font-color-light);
     }
   }
 
   &__modal {
     display: flex;
-    color: #fff;
+    color: var(--font-color-light);
     gap: 53px;
 
     .mobile-screen({
@@ -149,15 +149,15 @@
 
     &__title {
       margin-bottom: 20px;
-      font-family: HelveticaNeueCyr, sans-serif;
-      font-size: 48px;
+      font-family: var(--font-main);
+      font-size: var(--font-size-xxxxl);
       font-weight: 900;
       letter-spacing: 0;
       line-height: 90%;
     }
 
     &__text {
-      font-family: HelveticaNeueCyr-Light, sans-serif;
+      font-family: var(--font-light);
       font-size: 21.6px;
       font-weight: 400;
       letter-spacing: 0;
@@ -165,8 +165,8 @@
     }
 
     &__description {
-      font-family: HelveticaNeueCyr-Light, sans-serif;
-      font-size: 24px;
+      font-family: var(--font-light);
+      font-size: var(--font-size-xxl);
       font-weight: 400;
       letter-spacing: 0;
       line-height: 120%;
