--- a/src/components/block-tickets/index.less
+++ b/src/components/block-tickets/index.less
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
-    color: #202020;
+    color: var(--font-color-dark);
     gap: 20px;
 
     .mobile-screen({
@@ -15,28 +15,28 @@
 
   &__title {
     margin-bottom: 90px;
-    font-family: HelveticaNeueCyr, sans-serif;
-    font-size: 48px;
+    font-family: var(--font-main);
+    font-size: var(--font-size-xxxxl);
     font-style: normal;
     font-weight: 900;
     line-height: 90%; /* 43.2px */
 
     .mobile-screen({
-      font-size: 32px;
+      font-size: var(--font-size-xxxl);
     });
   }
 
   &__text {
     width: 429px;
     margin-bottom: 90px;
-    font-family: HelveticaNeueCyr-Light, sans-serif;
-    font-size: 24px;
+    font-family: var(--font-light);
+    font-size: var(--font-size-xxl);
     font-style: normal;
     font-weight: 400;
     line-height: 120%; /* 28.8px */
 
     .mobile-screen({
-      font-size: 16px;
+      font-size: var(--font-size-m);
     });
   }
 
