--- a/src/components/buy-button/index.less
+++ b/src/components/buy-button/index.less
@@ -6,9 +6,9 @@
   align-items: center;
   padding: 0 30px 0 38px;
   border: none;
-  border-radius: 70px;
+  border-radius: var(--border-radius-large);
   appearance: none;
-  background: #DB1933;
+  background: var(--color-danger);
   box-shadow: 0 4px 54px 0 rgb(0 0 0 / 25%);
   gap: 10px;
   text-decoration: none;
@@ -25,9 +25,9 @@
     justify-content: center;
     padding: 15px 0 12px 22px;
     border-left: 2px dashed #FFF;
-    color: #FFF;
-    font-family: HelveticaNeueCyr, sans-serif;
-    font-size: 22px;
+    color: var(--font-color-light);
+    font-family: var(--font-main);
+    font-size: var(--font-size-xl);
     font-style: normal;
     font-weight: 550;
     gap: 10px;
