--- a/docs/styles.css
+++ b/docs/styles.css
@@ -4,11 +4,11 @@
   --color-danger: #DB1933;
   --color-primary: #78516C;
   --color-secondary: #202020;
-  --font-main: Helveticaneuecyr, sans-serif;
-  --font-light: Helveticaneuecyr-light, sans-serif;
-  --font-ultra-light: HelveticaNeueCyr-UltraLight, sans-serif;
-  --font-bold: Helveticaneuecyr-bold, sans-serif;
-  --font-heawy: Helveticaneuecyr-heawy, sans-serif;
+  --font-main: helveticaneuecyr, sans-serif;
+  --font-light: helveticaneuecyr-light, sans-serif;
+  --font-ultra-light: helveticaneuecyr-ultralight, sans-serif;
+  --font-bold: helveticaneuecyr-bold, sans-serif;
+  --font-heawy: helveticaneuecyr-heawy, sans-serif;
   --font-oswald: oswald, sans-serif;
   --font-color-dark: #202020;
   --font-color-light: #fff;
@@ -1752,6 +1752,7 @@ html {
   font-weight: 700;
   line-height: 120%;
   /* 28.8px */
+  cursor: pointer;
 }
 @media screen and (max-width: 767px) {
   .list__question {
@@ -1768,7 +1769,6 @@ html {
   background-position: center;
   background-repeat: no-repeat;
   content: '';
-  cursor: pointer;
 }
 @media screen and (max-width: 767px) {
   .list__question::after {
@@ -2051,14 +2051,14 @@ html {
   max-width: 100%;
   margin: 0 auto;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1023px) {
   .modal__wrapper {
     top: 0;
     margin: 64px;
     bottom: 100px;
   }
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1023px) {
   .modal__dialog {
     overflow: scroll;
     height: calc(100vh - 128px);
@@ -2075,7 +2075,7 @@ html {
   background-size: cover;
   cursor: pointer;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1023px) {
   .modal__close {
     top: -17px;
     right: -50px;
@@ -2095,7 +2095,7 @@ html {
   cursor: pointer;
   opacity: 0.5;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1023px) {
   .modal__control {
     padding: 0;
   }
@@ -2107,7 +2107,7 @@ html {
   right: -96px;
   transform: rotate(-90deg);
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1023px) {
   .modal__control_right {
     right: -64px;
   }
@@ -2116,7 +2116,7 @@ html {
   left: -96px;
   transform: rotate(90deg);
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1023px) {
   .modal__control_left {
     left: -64px;
   }
