--- a/src/components/modal/index.less
+++ b/src/components/modal/index.less
@@ -28,7 +28,7 @@
     max-width: 100%;
     margin: 0 auto;
 
-    .mobile-screen({
+    .tablet-screen({
       top: 0;
       margin: 64px;
       bottom: 100px;
@@ -36,7 +36,7 @@
   }
 
   &__dialog {
-    .mobile-screen({
+    .tablet-screen({
       overflow: scroll;
       height: calc(100vh - 128px);
     })
@@ -53,7 +53,7 @@
     background-size: cover;
     cursor: pointer;
 
-    .mobile-screen({
+    .tablet-screen({
       top: -17px;
       right: -50px;
     });
@@ -72,7 +72,7 @@
     background-size: 64px;
     cursor: pointer;
     opacity: 0.5;
-    .mobile-screen({
+    .tablet-screen({
       padding: 0;
     });
 
@@ -84,7 +84,7 @@
       right: -96px;
       transform: rotate(-90deg);
 
-      .mobile-screen({
+      .tablet-screen({
         right: -64px;
       });
     }
@@ -93,7 +93,7 @@
       left: -96px;
       transform: rotate(90deg);
 
-      .mobile-screen({
+      .tablet-screen({
         left: -64px;
       });
     }
